--- a/v0.2
+++ b/v0.2
@@ -8,6 +8,7 @@
 #include <random>
 #include <ctime>
 #include <sstream>
+#include <chrono>
 
 using namespace std;
 
@@ -19,17 +20,20 @@ struct Studentas
     int egzaminas;
 };
 
-double skaiciuotiVidurki(const vector<int>& namuDarbai)
+double skaiciuotiVidurki(const vector<int>& nd)
 {
-    if (namuDarbai.empty())   ///tikriname, ar nd vektorius tuscias
-        return 0;
-    double suma = accumulate(namuDarbai.begin(), namuDarbai.end(), 0.0);
-    return suma / namuDarbai.size();
+    if (nd.empty()) return 0.0;
+    double suma = 0.0;
+    for (int pazymys : nd)
+    {
+        suma += pazymys;
+    }
+    return suma / nd.size();
 }
 
 double skaiciuotiMediana(const vector<int>& namuDarbai)
 {
-    if (namuDarbai.empty()) return 0; ///tikriname, ar nd vektorius tuscias?
+    if (namuDarbai.empty()) return 0; ///tikriname, ar nd vektorius tuscias
 
     vector<int> tempNamuDarbai = namuDarbai;
     sort(tempNamuDarbai.begin(), tempNamuDarbai.end()); /// didejimo tvarka
@@ -69,8 +73,8 @@ void atsitiktiniai(Studentas& studentas)
 
 void atsitiktiniaiStudentai(Studentas& studentas)
 {
-    const char* vardai[] = {"Anna", "Gloria", "Sofia", "Ugne", "Aina", "Guoda"};
-    const char* pavardes[] = {"Mockute", "Liuc", "Mickute", "Macaite", "Miller", "Peleda"};
+    const char* vardai[] = {"Ana", "Gloria", "Sofia", "Ugne", "Aina", "Guoda"};
+    const char* pavardes[] = {"Mockute", "Liuc", "Mickute", "Macaite", "Migonyte", "Peleda"};
     int vardasIndex=rand()%6;
     int pavardeIndex=rand()%6;
     studentas.vardas=vardai[vardasIndex];
@@ -91,13 +95,15 @@ void nuskaitymas(vector<Studentas>& studentai, const string& failoPavadinimas)
     string eilute;
     getline(fd, eilute); //praleidzia pirmaja eil.
 
-    while (getline(fd, eilute)) {
+    while (getline(fd, eilute))
+    {
         istringstream eilutesSrautas(eilute);
         eilutesSrautas >> studentas.vardas >> studentas.pavarde;
 
         int pazymys;
         studentas.namuDarbai.clear();
-        while (eilutesSrautas >> pazymys && pazymys != -1) {
+        while (eilutesSrautas >> pazymys && pazymys != -1)
+        {
             studentas.namuDarbai.push_back(pazymys);
         }
 
@@ -109,35 +115,114 @@ void nuskaitymas(vector<Studentas>& studentai, const string& failoPavadinimas)
 }
 
 
-bool rusiuoti(const Studentas& a, const Studentas& b){
+bool rusiuotiPagalVarda(const Studentas& a, const Studentas& b)
+{
     return a.vardas < b.vardas;
 }
 
-void spausdinimas(const vector<Studentas>& studentai, const string& isvedimoFailas = "") {
+bool rusiuotiPagalPavarde(const Studentas& a, const Studentas& b)
+{
+    return a.pavarde < b.pavarde;
+}
+
+bool rusiuotiPagalGalutiniVidurki(const Studentas& a, const Studentas& b)
+{
+    return skaiciuotiGalutini(a.namuDarbai, a.egzaminas, true) < skaiciuotiGalutini(b.namuDarbai, b.egzaminas, true);
+}
+
+bool rusiuotiPagalGalutiniMediana(const Studentas& a, const Studentas& b)
+{
+    return skaiciuotiGalutini(a.namuDarbai, a.egzaminas, false) < skaiciuotiGalutini(b.namuDarbai, b.egzaminas, false);
+}
+
+void spausdinimas(const vector<Studentas>& studentai, const string& isvedimoFailas = "")
+{
     ostream& out = isvedimoFailas.empty() ? cout : *new ofstream(isvedimoFailas);
 
     ///rusiavimas atitinkamai pagal naudotojo pasirirnkima
     vector<Studentas> surusiuotiStudentai = studentai;
-    sort(surusiuotiStudentai.begin(), surusiuotiStudentai.end(), rusiuoti);
+
+    int pasirinkimas;
+    cout << "Pasirinkite kaip rusiuoti studentus:\n"
+         << "1 - Pagal varda\n"
+         << "2 - Pagal pavarde\n"
+         << "3 - Pagal vidurki\n"
+         << "4 - Pagal mediana\n";
+    cin >> pasirinkimas;
+
+    switch(pasirinkimas)
+    {
+    case 1:
+        sort(surusiuotiStudentai.begin(), surusiuotiStudentai.end(), rusiuotiPagalVarda);
+        break;
+    case 2:
+        sort(surusiuotiStudentai.begin(), surusiuotiStudentai.end(), rusiuotiPagalPavarde);
+        break;
+    case 3:
+        sort(surusiuotiStudentai.begin(), surusiuotiStudentai.end(), rusiuotiPagalGalutiniVidurki);
+        break;
+    case 4:
+        sort(surusiuotiStudentai.begin(), surusiuotiStudentai.end(), rusiuotiPagalGalutiniMediana);
+        break;
+    default:
+        cout << "Pasirinkimas netinkamas, surusiuota pagal varda.\n";
+        sort(surusiuotiStudentai.begin(), surusiuotiStudentai.end(), rusiuotiPagalVarda);
+    }
 
     out << fixed << setprecision(2);
-    out << "Studentų galutiniai balai:\n";
+    out << "Studentu galutiniai balai:\n";
     out << "----------------------------------------------------------------\n";
     out << left << setw(15) << "Vardas" << setw(15) << "Pavarde" << setw(20) << "Galutinis (Vid.)" << setw(20) << "Galutinis (Med.)\n";
     out << "----------------------------------------------------------------\n";
 
-    for (const Studentas& studentas : surusiuotiStudentai) {
-        double galutinisVidurkis = 0.4 * skaiciuotiVidurki(studentas.namuDarbai) + 0.6 * studentas.egzaminas;
-        double galutineMediana = 0.4 * skaiciuotiMediana(studentas.namuDarbai) + 0.6 * studentas.egzaminas;
+    for (const Studentas& studentas : surusiuotiStudentai)
+    {
+        double galutinisVidurkis = skaiciuotiGalutini(studentas.namuDarbai, studentas.egzaminas, true);
+        double galutineMediana = skaiciuotiGalutini(studentas.namuDarbai, studentas.egzaminas, false);
         out << left << setw(15) << studentas.vardas << setw(15) << studentas.pavarde << setw(20) << galutinisVidurkis << setw(20) << galutineMediana << "\n";
     }
     out << "----------------------------------------------------------------\n";
 
-    if (!isvedimoFailas.empty()) {
+    if (!isvedimoFailas.empty())
+    {
         delete &out;
     }
 }
 
+string pasirinktiFaila()
+{
+    string failoPavadinimas;
+
+    cout << "Pasirinkite faila is kurio norite skaityti duomenis:\n"
+         << "1 - kursiokai.txt\n"
+         << "2 - studentai10000.txt\n"
+         << "3 - studentai100000.txt\n"
+         << "4 - studentai1000000.txt\n";
+
+    int pasirinkimas;
+    cin >> pasirinkimas;
+
+    switch (pasirinkimas)
+    {
+    case 1:
+        failoPavadinimas = "kursiokai.txt";
+        break;
+    case 2:
+        failoPavadinimas = "studentai10000.txt";
+        break;
+    case 3:
+        failoPavadinimas = "studentai100000.txt";
+        break;
+    case 4:
+        failoPavadinimas = "studentai1000000.txt";
+        break;
+    default:
+        cout << "Neteisingas pasirinkimas. Skaitoma is kursiokai.txt\n";
+        failoPavadinimas = "kursiokai.txt";
+    }
+
+    return failoPavadinimas;
+}
 
 int main()
 {
@@ -147,15 +232,20 @@ int main()
     char testi;
     int meniu = 0;
 
+    double visoLaikoSuma = 0.0;
+    int testuSkaicius = 0;
+
     do
     {
+        auto start = chrono::high_resolution_clock::now(); // Pradedamas laiko skaiciavimas
+
         cout << "Pasirinkite buda:\n"
              << "1 - ivesti studentu duomenis rankiniu budu \n"
              << "2 - sugeneruoti pazymius \n"
              << "3 - generuoti ir pazymius ir studentu vardus, pavardes \n"
-             << "4 - baigti darba \n" ;
+             << "4 - skaityti is failo \n"
+             << "5 - baigti darba \n" ;
         cin >> meniu;
-
 
         switch(meniu)
         {
@@ -174,18 +264,18 @@ int main()
                 studentas.namuDarbai.clear(); /// Isvalome namų darbu pazymiu vektoriu
 
                 int pazymys;
-                cout << "Iveskite namu darbu rezultatus (iveskite -1 jei baigete ivedima): ";
+                cout << "Iveskite namu darbu rezultatus (iveskite 0 jei baigete ivedima): " << endl;
                 int k=1;
 
                 while(true)
                 {
                     cout << k << "-asis pazymys: ";
-                    if(cin >> pazymys && pazymys != -1)
+                    if(cin >> pazymys && pazymys != 0)
                     {
                         studentas.namuDarbai.push_back(pazymys);
                         k++;
                     }
-                    else if (pazymys==-1)
+                    else if (pazymys==0)
                         break;
                     else
                     {
@@ -206,62 +296,90 @@ int main()
 
             while (testi == 't');
 
-            cout << endl << "Pasirinkite skaiciavimo buda: " << endl;
-            cout << "1 - Vidurkis" << endl;
-            cout << "2 - Mediana" << endl;
-            int pasirinkimas;
-            cin >> pasirinkimas;
-            while(pasirinkimas!=1 && pasirinkimas!=2)
-            {
-                cout << "Iveskite teisinga pasirinkima: " ;
-                cin.clear();
-                cin.ignore(80,'\n');
-                cin >> pasirinkimas;
-            }
+            spausdinimas(studentai);
 
-            bool naudotiVidurki = (pasirinkimas == 1); /// Jei pasirinkimas = 1, naudosime vidurkį, kitu atveju medianą
-
-            cout << setw(13) << left << "Vardas" << setw(13) << left << "Pavarde" << setw(13) << left << "Galutinis (vid./med.)" << endl;
-            cout << "----------------------------------------------------------------------" <<endl;
-            for (size_t i=0; i<studentai.size(); i++) // Changed int to size_t
-            {
-                double galutinis = skaiciuotiGalutini(studentai[i].namuDarbai, studentai[i].egzaminas, naudotiVidurki);
-                cout << setw(13) << left << studentai[i].vardas << setw(13) << left << studentai[i].pavarde << setw(13) << left << fixed << setprecision(2) << galutinis << endl;
-            }
             break;
         }
         case 2:
         {
-            nuskaitymas(studentai, "studentai10000.txt"); // Nuskaitomas failas su studentų duomenimis
-            spausdinimas(studentai, "isvedimas.txt");
+            for (auto& studentas : studentai)
+            {
+                auto startTest = chrono::high_resolution_clock::now(); // Pradedamas laiko skaiciavimas testui
+
+                atsitiktiniai(studentas);
+                cout << "Studentas: \nEgzaminas: " << studentas.egzaminas << "\nNamu darbu pazymiai: ";
+                for (int pazymys : studentas.namuDarbai)
+                {
+                    cout << pazymys << " ";
+                }
+                cout << "\n\n";
+
+                auto endTest = chrono::high_resolution_clock::now(); // Baigiamas laiko skaiciavimas testui
+                chrono::duration<double> timeTest = endTest - startTest; // Laikas testui
+                double laikasTest = timeTest.count(); // Laikas testui
+                visoLaikoSuma += laikasTest; // Pridedamas laikas prie viso laiko sumos
+                testuSkaicius++; // Pridedamas vienetinis testų skaičius
+            }
             break;
         }
-     case 3:
-{
-    cout << fixed << setprecision(2);
-    cout << "Studentu galutiniai balai:\n";
-    cout << "----------------------------------------------------------------\n";
-    cout << left << setw(15) << "Vardas" << setw(15) << "Pavarde" << setw(20) << "Galutinis (Vid.)" << setw(20) << "Galutinis (Med.)\n";
-    cout << "----------------------------------------------------------------\n";
 
-    for (int i = 0; i < 6; i++)
-    {
-        Studentas naujasStudentas;
-        atsitiktiniaiStudentai(naujasStudentas);
-        studentai.push_back(naujasStudentas);
+        case 3:
+        {
+            auto startTest = chrono::high_resolution_clock::now(); // Pradedamas laiko skaiciavimas testui
 
-        double galutinisVidurkis = skaiciuotiGalutini(naujasStudentas.namuDarbai, naujasStudentas.egzaminas, true);
-        double galutineMediana = skaiciuotiGalutini(naujasStudentas.namuDarbai, naujasStudentas.egzaminas, false);
-        cout << left << setw(15) << naujasStudentas.vardas << setw(15) << naujasStudentas.pavarde << setw(20) << galutinisVidurkis << setw(20) << galutineMediana << "\n";
-    }
-    cout << "----------------------------------------------------------------\n";
-    break;
-}
+            cout << fixed << setprecision(2);
+            cout << "Studentu galutiniai balai:\n";
+            cout << "----------------------------------------------------------------\n";
+            cout << "Vardas" << setw(15) << "Pavarde" << setw(20) << "Galutinis (Vid.)" << setw(20) << "Galutinis (Med.)\n";
+            cout << "----------------------------------------------------------------\n";
+
+            for (int i = 0; i < 6; i++)
+            {
+                Studentas naujasStudentas;
+                atsitiktiniaiStudentai(naujasStudentas);
+                studentai.push_back(naujasStudentas);
+
+                double galutinisVidurkis = skaiciuotiGalutini(naujasStudentas.namuDarbai, naujasStudentas.egzaminas, true);
+                double galutineMediana = skaiciuotiGalutini(naujasStudentas.namuDarbai, naujasStudentas.egzaminas, false);
+                cout << left << setw(15) << naujasStudentas.vardas << setw(15) << naujasStudentas.pavarde << setw(20) << galutinisVidurkis << setw(20) << galutineMediana << "\n";
+            }
+            cout << "----------------------------------------------------------------\n";
+
+            auto endTest = chrono::high_resolution_clock::now(); // Baigiamas laiko skaiciavimas testui
+            chrono::duration<double> timeTest = endTest - startTest; // Laikas testui
+            double laikasTest = timeTest.count(); // Laikas testui
+            visoLaikoSuma += laikasTest; // Pridedamas laikas prie viso laiko sumos
+            testuSkaicius++; // Pridedamas vienetinis testų skaičius
+            break;
+        }
         case 4:
+        {
+            auto startTest = chrono::high_resolution_clock::now(); // Pradedamas laiko skaiciavimas testui
+
+            nuskaitymas(studentai, pasirinktiFaila());
+            spausdinimas(studentai, "isvedimas.txt");
+
+            auto endTest = chrono::high_resolution_clock::now(); // Baigiamas laiko skaiciavimas testui
+            chrono::duration<double> timeTest = endTest - startTest; // Laikas testui
+            double laikasTest = timeTest.count(); // Laikas testui
+            visoLaikoSuma += laikasTest; // Pridedamas laikas prie viso laiko sumos
+            testuSkaicius++; // Pridedamas vienetinis testu skaicius
             break;
         }
+        case 5:
+            break;
+        }
+
+        auto end = chrono::high_resolution_clock::now(); // Baigiamas laiko skaiciavimas
+        chrono::duration<double> time = end - start; // Laikas
+        double laikas = time.count(); // Issaugojamas laikas
+        cout << "Visas sugaistas laikas: " << laikas << " s" << endl;
+
     }
-    while (meniu != 4);
+    while (meniu != 5);
+
+    double vidurkis = visoLaikoSuma / testuSkaicius; // Suskaiciuojamas laiku vidurkis
+    cout << "Keliu testu laiku vidurkis: " << vidurkis << " s" << endl; // Isvedamas laiku vidurkis
 
     return 0;
 }
