--- a/latex/files.tex
+++ b/latex/files.tex
@@ -4,5 +4,6 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{\mbox{\hyperlink{functions__old_8h_source}{functions\+\_\+old.\+h}} }{\pageref{functions__old_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{functions__vector_8h_source}{functions\+\_\+vector.\+h}} }{\pageref{functions__vector_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{studentas_8h_source}{studentas.\+h}} }{\pageref{studentas_8h_source}}{}
+\item\contentsline{section}{\mbox{\hyperlink{vector_8h_source}{vector.\+h}} }{\pageref{vector_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{zmogus_8h_source}{zmogus.\+h}} }{\pageref{zmogus_8h_source}}{}
 \end{DoxyCompactList}
