--- a/latex/functions_8h_source.tex
+++ b/latex/functions_8h_source.tex
@@ -6,7 +6,7 @@
 \DoxyCodeLine{00003\ }
 \DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <vector>}}
 \DoxyCodeLine{00005\ }
-\DoxyCodeLine{00009\ \textcolor{keyword}{enum\ class}\ ContainerType\ \{\ None,\ Vector\ \};}
+\DoxyCodeLine{00009\ \textcolor{keyword}{enum\ class}\ ContainerType\ \{\ None,\ \mbox{\hyperlink{class_vector}{Vector}}\ \};}
 \DoxyCodeLine{00010\ }
 \DoxyCodeLine{00014\ \textcolor{keyword}{enum\ class}\ Action\ \{\ None,\ Generate,\ Sort\ \};}
 \DoxyCodeLine{00015\ }
